# nus-cs3219-ay2425s1-cs3219-ay2425s1-project-project-template

./: .dockerignore  .env  .env.example  .env.local  .env.sample  .env.sample~  .env~  .eslintignore  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .prettierrc  .prettierrc.json  CODEOWNERS  Jenkinsfile  LICENSE  Makefile  README.md  TestBranch Spoiler.md  app.yaml  architecture.dio  build_and_push_services.sh  build_and_push_services_dev.sh  cloudbuild.yaml  compose.yaml  deploy_microservices.sh  docker-compose-backend.yaml  docker-compose-dev.yml  docker-compose-tests.yaml  docker-compose.dev.yml  docker-compose.local.yaml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  docker_push.sh  dump.rdb  eslint.config.mjs  exit  (+19 more)
backend/question-service/: .dockerignore  .env  .env.example  .env.sample  .gitignore  .prettierignore  Dockerfile  Dockerfile.dev  Makefile  README.md  compose.yaml  go.mod  go.sum  index.js  index.ts  package-lock.json  package.json  pyproject.toml  questionRoutes.js  requirements.txt  server.js  tsconfig.json
backend/question-service/__mocks__/: question.mock.ts  question.mocks.test.ts
backend/question-service/__tests__/: index.test.ts
backend/question-service/add-question/: addQuestionController.ts  addQuestionRoute.ts
backend/question-service/backend/: go.mod  go.sum
backend/question-service/cmd/: main.go
backend/question-service/config/: db.js
backend/question-service/controller/: question-controller.js
backend/question-service/controllers/: addQuestionController.ts  getQuestionController.ts  questionsController.js
backend/question-service/delete-question/: deleteQuestionController.ts  (+1 more)
(+5069 files in other folders)
